--- a/story telling/index.html
+++ b/story telling/index.html
@@ -15,12 +15,12 @@
     <main>
         <section class="cards">
             <div class="card" data-video="assets/videos/hampi.mp4">
-                <img src="assets/images/hampi.jpeg" alt="hampi">
+                <img src="assets/images/hampi.jpg" alt="hampi">
                 <h2>Hampi</h2>
                 <p>Ancient ruins and UNESCO World Heritage site.</p>
             </div>
             <div class="card" data-video="assets/videos/chennakeshava_temple_belur.mp4">
-                <img src="assets/images/chennakeshava_temple_belur.jpeg" alt="chennakeshava temple belur">
+                <img src="assets/images/chennakeshava_temple_belur.jpg" alt="chennakeshava temple belur">
                 <h2>Chennakeshava temple belur</h2>
                 <p>Famous for its palace, heritage, and cultural festivals.</p>
             </div>
